--- a/package.json
+++ b/package.json
@@ -31,12 +31,19 @@
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validation": "^1.0.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.0",
     "mongoose": "^5.7.1",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "nyc": "^14.1.1",
+    "should": "^13.2.3",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
+    "sinon-express-mock": "^2.2.1"
   }
 }
