--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
     "nodemon": "^1.19.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
@@ -44,6 +49,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongoose": "^5.7.1",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "supertest": "^4.0.2"
   }
 }
