--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node server/index.js",
-    "test": "NODE_ENV=test mocha --recursive --require @babel/register ./server/tests/ --exit"
+    "test:server": "NODE_ENV=test nyc mocha --recursive --require @babel/register ./server/tests/ --exit",
+    "coverage:server": "nyc --reporter html --reporter text --report-dir ./server/coverage npm run test:server"
   },
   "author": "Victor Nomwesigwa",
   "license": "ISC",
@@ -50,6 +51,7 @@
     "mocha": "^6.2.0",
     "mongoose": "^5.7.1",
     "nodemailer": "^6.3.0",
+    "nyc": "^14.1.1",
     "supertest": "^4.0.2"
   }
 }
