--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,12 @@
 language: node_js
 
 node_js:
-  - "stable"
-
-cache:
-  directories:
-    - node_modules
-
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-
-script:
-  - npm run test:coverage
-
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-
-language: node_js
-node_js:
   - "10"
+
 cache:
   npm: true
+
+services: mongodb
 
 before_script:
   - npm install
@@ -36,6 +20,3 @@ script:
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-
-after_success:
-  'npm run coverage:server'
