--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "10"
 
 cache:
+  directories:
+    - "node_modules"
   npm: true
 
 services: mongodb
@@ -16,7 +18,7 @@ before_script:
   - echo "" >> .env
 
 script:
-  - npm run test:server
+  - npm run coverage:server
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
