bg: Add admin flag on user model - add admin flag under user model - modify tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Luggage Identifying System",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server/index.js",
+    "start:server": "nodemon --exec babel-node server/index.js",
     "test:server": "NODE_ENV=test nyc mocha --recursive --require @babel/register ./server/tests/ --exit",
     "coverage:server": "nyc --reporter=lcov --reporter=text --report-dir ./server/coverage npm run test:server"
   },
@@ -22,10 +22,6 @@
     }
   },
   "devDependencies": {
-    "@babel/register": "^7.6.2",
-    "nodemon": "^1.19.2"
-  },
-  "dependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
     "@babel/node": "^7.6.2",
@@ -35,7 +31,13 @@
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.2"
+  },
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -43,8 +45,6 @@
     "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
