--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "mongoose": "^5.7.1",
     "nodemailer": "^6.3.0",
     "nyc": "^14.1.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
+    "sinon-express-mock": "^2.2.1",
     "supertest": "^4.0.2"
   }
 }
