--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
