--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,23 @@
 {
-  "extends": ["airbnb", "eslint-config-airbnb"],
+  "extends": [
+    "airbnb",
+    "eslint-config-airbnb",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["react", "@typescript-eslint", "prettier"],
   "env": {
     "node": true,
     "es6": true,
     "mocha": true,
     "browser": true,
-    "commonjs": true
+    "commonjs": true,
+    "jest": true
   },
   "rules": {
+    "prettier/prettier": ["error", { "singleQuote": true }],
     "new-cap": 0,
     "import/prefer-default-export": "off",
     "import/no-unresolved": 0,
@@ -18,6 +28,15 @@
     "prefer-destructuring": 0,
     "no-shadow": 0,
     "array-callback-return": 0,
-    "no-underscore-dangle": 0
-  }
+    "no-underscore-dangle": 0,
+    "@typescript-eslint/explicit-member-accessibility": 0,
+    "@typescript-eslint/explicit-function-return-type": 0
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  },
+  "parser": "@typescript-eslint/parser"
 }
