--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "Luggage Identifying System",
   "main": "index.js",
   "scripts": {
-    "start:server": "nodemon --exec babel-node server/index.js",
+    "build": "webpack --mode production --open --hot",
+    "server": "nodemon --exec babel-node server/index.js",
+    "client": "webpack-dev-server --open --mode development --hot --https",
+    "dev:server": "concurrently --kill-others \"npm run server\" \"npm run client\"",
+    "test:client": "jest -u",
+    "test:watch": "jest --watch",
     "test:server": "NODE_ENV=test nyc mocha --recursive --require @babel/register ./server/tests/ --exit",
-    "coverage:server": "nyc --reporter=lcov --reporter=text --report-dir ./server/coverage npm run test:server"
+    "coverage:server": "nyc --reporter=lcov --reporter=text --report-dir ./server/coverage npm run test:server",
+    "coverage:client": "jest --collectCoverage",
+    "lint": "eslint"
   },
   "author": "Victor Nomwesigwa",
   "license": "ISC",
@@ -33,14 +40,45 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.19",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-test-renderer": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
+    "concurrently": "^5.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^1.19.2"
+    "eslint-plugin-prettier": "^3.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
+    "path": "^0.12.7",
+    "prettier": "^1.18.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-hot-loader": "^4.12.15",
+    "react-test-renderer": "^16.10.2",
+    "source-map-loader": "^0.2.4",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
@@ -54,6 +92,16 @@
     "mongoose": "^5.7.1",
     "nodemailer": "^6.3.0",
     "nyc": "^14.1.1",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.4.0",
+    "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.2.1",
