--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "delay": "2500",
     "env": {
       "NODE_ENV": "development",
-      "PORT": 3000
+      "PORT": 4000
     }
   },
   "devDependencies": {
@@ -38,6 +38,7 @@
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@types/enzyme": "^3.10.3",
@@ -62,8 +63,6 @@
     "nodemon": "^1.19.2",
     "path": "^0.12.7",
     "prettier": "^1.18.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
     "react-hot-loader": "^4.12.15",
     "react-test-renderer": "^16.10.2",
     "source-map-loader": "^0.2.4",
@@ -75,6 +74,10 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -82,6 +85,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "css-loader": "^3.2.0",
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -90,21 +94,29 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
     "mongoose": "^5.7.1",
+    "node-sass": "^4.13.0",
     "nodemailer": "^6.3.0",
     "nyc": "^14.1.1",
+    "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^2.1.8",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.2.1",
-    "supertest": "^4.0.2"
+    "style-loader": "^1.0.0",
+    "supertest": "^4.0.2",
+    "url-loader": "^2.2.0"
   }
 }
