--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production --open --hot",
     "server": "nodemon --exec babel-node server/index.js",
-    "client": "webpack-dev-server --open --mode development --hot --https",
+    "client": "webpack-dev-server --open --mode development --hot --watch",
     "dev:server": "concurrently --kill-others \"npm run server\" \"npm run client\"",
     "test:client": "jest -u",
     "test:watch": "jest --watch",
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "concurrently": "^5.0.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
@@ -60,12 +61,14 @@
     "eslint-plugin-prettier": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.2",
     "path": "^0.12.7",
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.12.15",
     "react-test-renderer": "^16.10.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
@@ -85,7 +88,6 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
-    "css-loader": "^3.2.0",
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -97,14 +99,15 @@
     "node-sass": "^4.13.0",
     "nodemailer": "^6.3.0",
     "nyc": "^14.1.1",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
+    "react-bootstrap-button-loader": "^2.0.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
-    "react-toastify": "^5.4.0",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8",
@@ -115,7 +118,6 @@
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.2.1",
-    "style-loader": "^1.0.0",
     "supertest": "^4.0.2",
     "url-loader": "^2.2.0"
   }
