--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,16 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
-    "target": "es6",
+    "target": "es5",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "es2015"],
     "moduleResolution": "node",
     "rootDir": "./client/src",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true,
+    "noImplicitThis": false,
     "importHelpers": true,
     "strictNullChecks": false,
     "noUnusedLocals": true,
