--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.6.2",
-    "@babel/node": "^7.6.2",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
@@ -49,6 +50,7 @@
     "@types/react-test-renderer": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
+    "babel-node": "0.0.1-security",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
@@ -62,7 +64,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^1.19.2",
+    "nodemon": "^1.19.4",
     "path": "^0.12.7",
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.12.15",
@@ -81,7 +83,6 @@
     "@types/react-router-dom": "^5.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.0",
-    "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
